--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -1,1 +1,1 @@
-</p>This is my image gallery. note that their are no images</p>
+</p>This is my image gallery. note that their are no images <img src="photos/boardWithStones.jpg"></p>
