--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -1,1 +1,3 @@
-</p>This is my image gallery. note that their are no images <img src="photos/boardWithStones.jpg"></p>
+<body>
+</p>This is my image gallery. note that their are no images <img src="/photos/boardWithStones.jpg" /></p>
+</body>
