--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -1,3 +1,6 @@
 <body>
-</p>This is my image gallery. note that their are no images <img src="/photos/boardWithStones.jpg" /></p>
+</p>This is my image gallery. note that their are no images <img src="/photos/boardWithStones.jpg" />
+<img src="/photos/boardWithStones.jpg" alt="Trulli" width="500" height="333">
+<img src="boardWithStones.jpg" alt="Trulli" width="500" height="333">
+</p>
 </body>
