troubleshooting image probelms

--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
+<html>
 <body>
-</p>This is my image gallery. note that their are no images <img src="/photos/boardWithStones.jpg" />
-<img src="/photos/boardWithStones.jpg" alt="Trulli" width="500" height="333">
-<img src="boardWithStones.jpg" alt="Trulli" width="500" height="333">
-</p>
+
+<h2>Images in Another Folder</h2>
+<p>It is common to store images in a sub-folder. You must then include the folder name in the src attribute:</p>
+
+<img src="baz.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+
 </body>
+</html>
