troubleshooting image probelms

--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -5,8 +5,7 @@
 <h2>Images in Another Folder</h2>
 <p>It is common to store images in a sub-folder. You must then include the folder name in the src attribute:</p>
 
-<img src="./baz.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
-<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.pixabay.com%2Fphoto%2F2018%2F04%2F21%2F22%2F41%2Fgo-3339748_960_720.jpg&imgrefurl=https%3A%2F%2Fpixabay.com%2Fphotos%2Fgo-board-game-board-games-play-3339748%2F&docid=9DPW_fgtwicZxM&tbnid=3Uz_vgvWvFuUfM%3A&vet=10ahUKEwiKjIPHs8LkAhVSvFkKHSgiCu8QMwjTASgGMAY..i&w=960&h=530&bih=828&biw=1707&q=go%20board&ved=0ahUKEwiKjIPHs8LkAhVSvFkKHSgiCu8QMwjTASgGMAY&iact=mrc&uact=8">
+<img src="pictures/baz.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
 
 </body>
 </html>
