--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -5,7 +5,10 @@
 <h2>Images in Another Folder</h2>
 <p>It is common to store images in a sub-folder. You must then include the folder name in the src attribute:</p>
 
-<img src="pictures/baz.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+<img src="photos/baz.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+<?php
+    echo "<img src='photos/baz.jpg' alt='photo of me' />";
+?>
 
 </body>
 </html>
