Added description to About Me page

--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h2>Images in Another Folder</h2>
-<p>It is common to store images in a sub-folder. You must then include the folder name in the src attribute:</p>
-
-<img src="photos/baz.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
-<?php
-    echo "<img src='photos/baz.jpg' alt='photo of me' />";
-?>
-
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+        <title></title>
+    </head>
+    <body>
+        <?php
+        echo ("Hello");
+        ?>
+        <div>
+            <img src="baz.jpg" alt="myPic" />
+        </div>
+    </body>
 </html>
