--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -10,7 +10,7 @@
         echo ("Hello");
         ?>
         <div>
-            <img src="baz.jpg" alt="myPic" />
+        <img src="https://www.w3schools.com/images/w3schools_green.jpg"alt="W3Schools.com">
         </div>
     </body>
 </html>
