--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -8,7 +8,7 @@
 <img src="https://www.w3schools.com/images/w3schools_green.jpg"alt="W3Schools.com">
 <img src="baz.jpg">
 <img src="../baz.jpg">
-<img src="photos/baz.jpg">
+<img src="photos/baz.jpg" />
 <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Ffarm1.staticflickr.com%2F108%2F282550087_6be4020654_b.jpg&imgrefurl=https%3A%2F%2Fwww.flickr.com%2Fphotos%2Fjohl%2F282550087%2F&docid=y1tP-ImzYC1sPM&tbnid=QXzfp65USXR4-M%3A&vet=10ahUKEwjju_npv8LkAhXh01kKHS9lALIQMwiXASgdMB0..i&w=1024&h=768&itg=1&hl=en&gl=ar&bih=828&biw=1707&q=go%20board&ved=0ahUKEwjju_npv8LkAhXh01kKHS9lALIQMwiXASgdMB0&iact=mrc&uact=8">
 
 
