--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -5,7 +5,7 @@
 <h2>Images in Another Folder</h2>
 <p>It is common to store images in a sub-folder. You must then include the folder name in the src attribute:</p>
 
-<img src="photos/baz.jpg"/>
+<img src="/photos/baz.jpg"/>
 
 </body>
 </html>
