--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -5,7 +5,8 @@
 <h2>Images in Another Folder</h2>
 <p>It is common to store images in a sub-folder. You must then include the folder name in the src attribute:</p>
 
-<img src="baz.jpg"/>
+<img src="boardWithStones.jpg"/>
+<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2a%2FFloorGoban.JPG&imgrefurl=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AFloorGoban.JPG&docid=FocV6vKopQhVzM&tbnid=L9oWWgy55O_Q1M%3A&vet=10ahUKEwjju_npv8LkAhXh01kKHS9lALIQMwiZASgfMB8..i&w=1137&h=1101&hl=en&gl=ar&bih=828&biw=1707&q=go%20board&ved=0ahUKEwjju_npv8LkAhXh01kKHS9lALIQMwiZASgfMB8&iact=mrc&uact=8"/>
 
 </body>
 </html>
