--- a/content/image-gallery.phtml
+++ b/content/image-gallery.phtml
@@ -2,11 +2,11 @@
 <html>
 <body>
 
-<h2>Images in Another Folder</h2>
-<p>It is common to store images in a sub-folder. You must then include the folder name in the src attribute:</p>
+<h2>Different Types of Go Boards</h2>
+<p>Go is considered by many to be the oldest board game in the world that is still played. It is thought to be somewhere between 2,000 and over 4,000 years old.</p>
 
 <img src="boardWithStones.jpg"/>
-<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2a%2FFloorGoban.JPG&imgrefurl=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AFloorGoban.JPG&docid=FocV6vKopQhVzM&tbnid=L9oWWgy55O_Q1M%3A&vet=10ahUKEwjju_npv8LkAhXh01kKHS9lALIQMwiZASgfMB8..i&w=1137&h=1101&hl=en&gl=ar&bih=828&biw=1707&q=go%20board&ved=0ahUKEwjju_npv8LkAhXh01kKHS9lALIQMwiZASgfMB8&iact=mrc&uact=8"/>
+<a href='https://photos.google.com/share/AF1QipOj8S-MGrIJLj9HgVWNkjQtdp7arx1rtvIjOhDCqplZ-3VUkTjfF5GfhO4YV38-Sw?key=TEtLR0hGY1p2MWFGQUwtcXdldDRUblhzWDJrQmlR&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/v-kONDMSk-hswmpnLdxuhy9M1CMAY_Tf4l3heflHi3HNNKkA3AmIUHRq_lbnZw3018CKxgOf32NcKeh0eCnEaFDjqIIGl9H7EE3Ah7Ll1jiBXwPwoChqCdigD7zY4AUlV5dRJO5w=w2400' /></a>
 
 </body>
 </html>
