--- a/content/about-me.phtml
+++ b/content/about-me.phtml
@@ -1,2 +1,2 @@
-</p>My name is Taylor Woods. I am a senior at Columbus State University. Other than coding, I enjoy playing the game of go and reading novels.
+</p class="fancyText">My name is Taylor Woods. I am a senior at Columbus State University. Other than coding, I enjoy playing the game of go and reading novels.
 Please take a look at my image gallery to find out more about go.</p>
